Fix 'umbrello doesn't support interface class inheriting a class'.

BUG:278772
FIXED-IN:2.20.1 (KDE Applications 16.08.1)